use ajax to delete data

--- a/web/src/main/webapp/lib/cssUser/table.css
+++ b/web/src/main/webapp/lib/cssUser/table.css
@@ -33,6 +33,8 @@ table{
     margin-top: 16px;
     border: 1px solid gold;
 
+    width: 600px;
+
     background-color: antiquewhite;
     height: 35px;
     color: peru;
