fixed URL stitch problem in ajax

--- a/web/src/main/webapp/css/table.css
+++ b/web/src/main/webapp/css/table.css
@@ -1,10 +1,7 @@
-a :link{
+a:link {
     color: darkgoldenrod;
 }
-a :visited{
-    color: #269abc;
 
-}
 a {
     margin-right: 25px;
     text-align: center;
@@ -12,12 +9,10 @@ a {
     color: darkgoldenrod;
 }
 
-
-h1,h2,h3{
+h1, h2, h3 {
     color: darkgoldenrod;
-    font-size:20px;
-    margin:0;
-
+    font-size: 20px;
+    margin: 0;
 }
 
 p {
@@ -25,37 +20,42 @@ p {
     font-family: fantasy;
     text-align: center;
 }
-p:hover{
+
+p:hover {
     color: #eb9316;
 }
-table{
-    margin: 0 auto;
-    margin-top: 16px;
+
+table {
+    margin: 16px auto 0 auto;
     border: 1px solid gold;
-
     width: 600px;
-
     background-color: antiquewhite;
-    height: 35px;
     color: peru;
-
-    font-size:18px;
+    font-size: 18px;
     text-align: center;
 }
-tr:hover{
-    background-color : khaki ;
+
+tr:hover {
+    background-color: khaki;
 }
-td{
-    height:35px;
+
+td {
+    height: 35px;
 }
 
 input[type="submit"] {
     text-align: center;
-    margin-left: 675px;
+    display: block;
+    margin: 10px auto;
     background-color: antiquewhite;
 }
 
-.header{
+input[type="submit"]:hover {
+    cursor: pointer;
+    background-color: #eb9316;
+}
+
+.header {
     height: 60px;
     background-color: antiquewhite;
     color: lightgoldenrodyellow;
@@ -63,17 +63,22 @@ input[type="submit"] {
     padding-left: 40px;
 }
 
-.navbar{
+.navbar {
     height: 40px;
     font-size: 17px;
-    background-color: khaki ;
+    background-color: khaki;
     padding-top: 30px;
     padding-left: 40px;
 }
 
-.body{
+.body {
     background-image: url(./images/background.jpg);
     height: 991px;
+}
+
+.container {
+    margin: 0 auto;
+    width: 600px;
 }
 
 
