--- a/web/src/main/webapp/angularApp/views/user.html
+++ b/web/src/main/webapp/angularApp/views/user.html
@@ -1,18 +1,20 @@
-<div class="body" ng-app="">
+<div class="body" >
+    <!--<p>user user user</p>-->
+<!--<p>{{users}}</p>-->
     <table >
         <tr>
             <th>姓名</th>
             <th>工号</th>
-            <th colspan="2">操作</th>
+            <th>操作</th>
         </tr>
         <tr ng-repeat="user in users">
             <td>{{user.name}}</td>
             <td>{{user.employee.name}}</td>
             <td>
-                <a href="/web/user/updateUser/{{user.id}}">修改</a>
+                <a href="#/updateUser/{{user.id}}">修改</a>
             </td>
-            <td>
-                <a ng-click="deleteUser(user.id)">删除</a>
+            <td ng-click="deleteUser(user.id)">
+                <a href="#/deleteUser">删除</a>
             </td>
         </tr>
 
