able to add&update user

--- a/web/src/main/webapp/lib/cssUser/main.css
+++ b/web/src/main/webapp/lib/cssUser/main.css
@@ -1,10 +1,10 @@
-a :link{
-    color: darkgoldenrod;
-}
-a :visited{
-    color: #269abc;
+/*a :link{*/
+    /*color: darkgoldenrod;*/
+/*}*/
+/*a :visited{*/
+    /*color: #269abc;*/
 
-}
+/*}*/
 a {
     margin-right: 25px;
     text-align: center;
