--- a/web/src/main/webapp/angularApp/views/user.html
+++ b/web/src/main/webapp/angularApp/views/user.html
@@ -1,5 +1,5 @@
-<div class="body" >
-    <table >
+<div class="body">
+    <table>
         <tr>
             <th>姓名</th>
             <th>工号</th>
@@ -7,33 +7,39 @@
         </tr>
         <tr ng-repeat="user in users">
             <td>{{user.name}}</td>
-            <td>{{user.employee.name}}</td>
+            <td>{{user.employee.id}}</td>
             <td>
-                <a href="#/updateUser/{{user.id}}">修改</a>
+                <a href ng-click="updateUser($index)">修改</a>
             </td>
-            <td >
+            <td>
                 <a href ng-click="deleteUser($event,user.id)">删除</a>
             </td>
+            <td ng-hide="update[$index]" ng-init="update[$index] = true"><input type="text" ng-model="user.name"/></td>
+            <td ng-hide="update[$index]"><input type="text" ng-model="user.password"/></td>
+            <td ng-hide="update[$index]"><input type="submit" ng-click="commitUpdate($index,user)" value="确定修改"/>
+            </td>
+
         </tr>
 
     </table>
 
-    <!--<form action="" method="post">-->
-    <!--<table border="1">-->
-    <!--<tr>-->
-    <!--<td>姓名</td>-->
-    <!--<td>密码</td>-->
-    <!--<td>工号</td>-->
-    <!--</tr>-->
-    <!-- -->
+    <table>
+        <tr>
+            <td>姓名</td>
+            <td>密码</td>
+            <td>工号</td>
+        </tr>
 
-    <!--<tr>-->
-    <!--<td><input type="text" name="name"></td>-->
-    <!--<td><input type="text" name="password"></td>-->
-    <!--<td><input type="text" name="employee_id"></td>-->
-    <!--</tr>-->
-    <!--</table>-->
-    <!--<input type="submit" value="添加系统用户"/>-->
-    <!--</form>-->
+        <tr>
+            <td><input type="text" ng-model="name"/></td>
+            <td><input type="text" ng-model="password"/></td>
+            <td><input type="text" ng-model="employee"/></td>
+
+        </tr>
+    </table>
+    <input type="submit" ng-click="addUser()" value="添加系统用户"/>
+
+    <!--<button ng-click="test(user.id)">test</button>-->
+
 </div>
 
