--- a/web/src/main/webapp/angularApp/views/schema.html
+++ b/web/src/main/webapp/angularApp/views/schema.html
@@ -33,18 +33,25 @@
     </table>
 
     <form>
-        <div>课程：<select class="select" ng-model="courseName" >
-            <option ng-repeat="course in courses" value={{course.name}}>{{course.name}}</option>
-        </select>
-        </div>
-
-        <div>教练：<select class="select" ng-model="coachName">
-                <option ng-repeat="coach in coaches" value={{coach.name}}>{{coach.name}}</option>
+        <div>课程：
+            <select ng-model="selectedCourse" ng-options="course.id as course.name for course in courses">
             </select>
         </div>
+        <div>教练：<select  ng-model="selectedCoach" ng-options="coach.id as coach.name for coach in coaches">
+        </select>
+        </div>
+        <!--<div>课程：<select class="select" ng-model="courseName" >-->
+            <!--<option ng-repeat="course in courses" value={{course.id}}>{{course.name}}</option>-->
+        <!--</select>-->
+        <!--</div>-->
+        <!--<div>教练：<select class="select" ng-model="coachName">-->
+                <!--<option ng-repeat="coach in coaches" value={{coach.id}}>{{coach.name}}</option>-->
+            <!--</select>-->
+        <!--</div>-->
 
         <div>时间：<input type="date" ng-model="time"/></div>
 
         <div>学员：<input type="text" ng-model="customer"/></div>
+        <div>提交 <input type="submit" ng-click="addSchema()" value="添加新课程"/></div>
     </form>
 </div>
