--- a/web/src/main/webapp/angularApp/views/schema.html
+++ b/web/src/main/webapp/angularApp/views/schema.html
@@ -8,22 +8,28 @@
             <td colspan="2">操作</td>
         </tr>
         <tr ng-repeat="schema in schemas">
-            <td ng-show="update" ng-init="update = true">{{schema.course.name}}</td>
-            <td ng-show="update">{{schema.employee.name}}</td>
-            <td ng-show="update">{{schema.time}}</td>
-            <td ng-show="update">{{schema.customer}}</td>
-            <td ng-show="update">
-                <button ng-click="updateSchema($index)" >修改</button>
+            <td ng-show="update[$index]" ng-init = "update[$index] = true">{{schema.course.name}}</td>
+            <td ng-show="update[$index]">{{schema.employee.name}}</td>
+            <td ng-show="update[$index]">{{schema.time}}</td>
+            <td ng-show="update[$index]">{{schema.customer}}</td>
+            <td ng-show="update[$index]">
+                <button  ng-click="updateSchema($index)" >修改</button>
             </td>
-            <td ng-show="update">
+            <td ng-show="update[$index]">
                 <button ng-click="deleteSchema($index,schema.id)" >删除</button>
             </td>
 
-            <td ng-hide="update"><input type="text" ng-model="updateCourse[$index]"></td>
-            <td ng-hide="update"><input type="text" ng-model="updateCoach[$index]"></td>
-            <td ng-hide="update"><input type="text" ng-model="updateTime[$index]"></td>
-            <td ng-hide="update"><input type="text" ng-model="updateCustomer[$index]"></td>
-            <td ng-hide="update">
+            <td ng-hide="update[$index]">
+                <select ng-model="updateCourse[$index]" ng-options="course.id as course.name for course in courses"></select>
+            </td>
+            <td ng-hide="update[$index]">
+                <select ng-model="updateCoach[$index]" ng-options="coach.id as coach.name for coach in coaches"></select>
+            </td>
+            <!--<td ng-hide="update[$index]"><input type="text" ng-model="updateCourse[$index]"></td>-->
+            <!--<td ng-hide="update[$index]"><input type="text" ng-model="updateCoach[$index]"></td>-->
+            <td ng-hide="update[$index]"><input type="date" ng-model="updateTime[$index]"></td>
+            <td ng-hide="update[$index]"><input type="text" ng-model="updateCustomer[$index]"></td>
+            <td ng-hide="update[$index]">
                 <button ng-click="confirmUpdate($index)" >确定修改</button>
             </td>
             <td ng-hide="update">
@@ -40,15 +46,6 @@
         <div>教练：<select  ng-model="selectedCoach" ng-options="coach.id as coach.name for coach in coaches">
         </select>
         </div>
-        <!--<div>课程：<select class="select" ng-model="courseName" >-->
-            <!--<option ng-repeat="course in courses" value={{course.id}}>{{course.name}}</option>-->
-        <!--</select>-->
-        <!--</div>-->
-        <!--<div>教练：<select class="select" ng-model="coachName">-->
-                <!--<option ng-repeat="coach in coaches" value={{coach.id}}>{{coach.name}}</option>-->
-            <!--</select>-->
-        <!--</div>-->
-
         <div>时间：<input type="date" ng-model="time"/></div>
 
         <div>学员：<input type="text" ng-model="customer"/></div>
